@@ -2,6 +2,8 @@ package com.nhnacademy.bookapi.service.category;
 
 import com.nhnacademy.bookapi.dto.book.BookSearchDTO;
 import com.nhnacademy.bookapi.dto.category.CategoryDTO;
+import com.nhnacademy.bookapi.dto.category.CategoryLevelDTO;
+import com.nhnacademy.bookapi.dto.category.CategoryResponseDTO;
 import com.nhnacademy.bookapi.dto.category.CategorySearchDTO;
 import com.nhnacademy.bookapi.entity.Book;
 import com.nhnacademy.bookapi.entity.BookCategory;
@@ -10,7 +12,9 @@ import com.nhnacademy.bookapi.repository.BookCategoryRepository;
 import com.nhnacademy.bookapi.repository.CategoryRepository;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
@@ -54,7 +58,7 @@ public class CategoryServiceImpl implements CategoryService {
     @Transactional(readOnly = true)
     @Override
     public Category getCategoryByName(String categoryName) {
-        return categoryRepository.findCategoryByName(categoryName);
+        return categoryRepository.findCategoryByName(categoryName).orElse(null);
     }
 
     @Override
@@ -62,10 +66,15 @@ public class CategoryServiceImpl implements CategoryService {
         bookCategoryRepository.save(bookCategory);
     }
 
+    @Transactional
     @Override
     public void saveCategory(CategoryDTO categoryDTO) {
-        Category category = categoryRepository.findById(categoryDTO.getParentCategoryId()).orElse(null);
-        Category saveCategory = new Category(categoryDTO.getName(), categoryDTO.getLevel(), category);
+        Category parentCategory = null;
+        if(categoryDTO.getParent() != null){
+            parentCategory = categoryRepository.findById(categoryDTO.getParentCategoryId()).orElse(null);
+        }
+
+        Category saveCategory = new Category(categoryDTO.getName(), categoryDTO.getLevel(), parentCategory);
         categoryRepository.save(saveCategory);
     }
 
@@ -81,11 +90,7 @@ public class CategoryServiceImpl implements CategoryService {
                 category -> new CategoryDTO(
                     category.getId(),
                     category.getName(),
-                    category.getLevel(),
-                    new CategoryDTO(
-                        category.getParent().getId(),
-                        category.getParent().getName(),
-                        category.getParent().getLevel())))
+                    category.getLevel()))
             .toList();
         return new PageImpl<>(list, pageable, categoryByLevel.getTotalElements());
     }
@@ -102,12 +107,12 @@ public class CategoryServiceImpl implements CategoryService {
         List<Category> categories = categoryRepository.findByNameContaining(query);
         return categories.stream()
                 .map(category -> new CategorySearchDTO(category.getId(), category.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CategoryDTO> getAllCategories() {
-        List<Category> categoryAll = categoryRepository.findAll();
+        List<Category> categoryAll = categoryRepository.findAllRootCategories();
         List<CategoryDTO> list = new ArrayList<>();
         for (Category category : categoryAll) {
             if(category.getParent() != null) {
@@ -136,6 +141,7 @@ public class CategoryServiceImpl implements CategoryService {
 
     }
 
+    @Transactional(readOnly = true)
     @Override
     public List<CategoryDTO> getCategoryByLevel(int level) {
         List<Category> byLevel = categoryRepository.findByLevel(level);
@@ -165,4 +171,66 @@ public class CategoryServiceImpl implements CategoryService {
         }
         return list;
     }
+
+
+    @Transactional(readOnly = true)
+    public List<CategoryResponseDTO> getAllCategoriesAsTree() {
+        List<Category> rootCategories = categoryRepository.findAllRootCategories(); // 루트 카테고리 가져오기
+        return buildCategoryTree(rootCategories);
+    }
+
+    @Override
+    public CategoryLevelDTO getCategoryLevelList() {
+        List<CategoryDTO> level1 = new ArrayList<>();
+        List<CategoryDTO> level2 = new ArrayList<>();
+        List<CategoryDTO> level3 = new ArrayList<>();
+        List<CategoryDTO> level4 = new ArrayList<>();
+        List<CategoryDTO> level5 = new ArrayList<>();
+
+        List<Category> categoryRepositoryAll = categoryRepository.findAll();
+        for (Category category : categoryRepositoryAll) {
+            int level = category.getLevel(); // Category 객체에서 레벨을 가져온다고 가정
+            CategoryDTO categoryDTO = new CategoryDTO(category.getId(), category.getName(), level);
+
+            // 레벨에 따라 리스트에 추가
+            switch (level) {
+                case 1:
+                    level1.add(categoryDTO);
+                    break;
+                case 2:
+                    level2.add(categoryDTO);
+                    break;
+                case 3:
+                    level3.add(categoryDTO);
+                    break;
+                case 4:
+                    level4.add(categoryDTO);
+                    break;
+                case 5:
+                    level5.add(categoryDTO);
+                    break;
+                default:
+                    break;
+            }
+        }
+        return new CategoryLevelDTO(level1, level2, level3, level4, level5);
+    }
+
+    private List<CategoryResponseDTO> buildCategoryTree(List<Category> categories) {
+        List<CategoryResponseDTO> categoryTree = new ArrayList<>();
+
+        for (Category category : categories) {
+            CategoryResponseDTO categoryDTO = new CategoryResponseDTO(
+                category.getId(),
+                category.getName(),
+                category.getLevel(),
+                buildCategoryTree(category.getChildren()) // 자식 트리 생성
+            );
+            categoryTree.add(categoryDTO);
+        }
+
+        return categoryTree;
+    }
+
+
 }
